# scream

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
code/: scream_sender.cpp
code/wrapper_lib/: CMakeLists.txt
gstscream/: Cargo.toml  build.rs
